--- a/cssclass/index.html
+++ b/cssclass/index.html
@@ -1,49 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <!-- 
-        adds a logo to the url bar
-        <link rel="icon" type="image/png" href="imgs/wd4elogo.png"> -->
-        <script src="https://kit.fontawesome.com/7e43f95222.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/week2.css">
-    <title>My School Page</title>
+	<meta charset="UTF-8">
+	<title>Ultimate Frisbee - Home</title>
+	<link rel="stylesheet" href="css/week2.css">
 </head>
 <body>
-    <header>
-        <h1>Scott Langdon</h1>
-        <nav>
-            <a href="https://google.com">One</a>
-            <a href="https://reddit.com">Two</a>
-            <a href="https://spotify.com">Three</a>
-            <a href="https://yahoo.com">Four</a>
-        </nav>
-    </header>    
-    <section class="half">
-        <h2>Favorite Foods</h2>
-        <ul>
-            <li>Tacos</li>
-            <li>Red Beans and Rice</li>
-            <li>Grilled Salmon</li>
-            <li>Pizza</li>
-        </ul>
-    </section>
-    <section class="half">
-        <h2>Achievements</h2>
-        Progress in this course (100%)  <meter min="0" max="100" value="100"></meter><br>
-        Progress in the specialization capstone (20%)  <meter min="0" max="100" value="20"></meter><br>
-        Progress in life goals (75%)  <meter min="0" max="100" value="75"></meter>
-    </section>
-    <section class="whole">
-        <h2>More About Me</h2>
-        <details>
-            <summary>My Childhood</summary>
-            I moved around quite a bit and wanted to be a rock star.  Now my passion is in programming and web development. 
-        </details>
-    </section>
-    <footer>   
-        <img src="newlogo.png" alt="web development for everyone logo">This page was created by Scott Langdon around
-        Colleen van Wendt. To learn more about web design visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>,
-    </footer>
+	<header>
+		<h1>Ulimate Frisbee</h1>
+		<nav>
+			<a href="index.html" class = "active">Home</a>
+			<a href="teams.html">Teams</a>
+			<a href="history.html">History</a>
+			<a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a>
+		</nav>
+	</header>
+		<main>
+			<aside class = "left">
+			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee%2C_Jul_2009_-_17.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Ultimate_Frisbee%2C_Jul_2009_-_19.jpg" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
+
+			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee_Colorado_Cup_2005.jpg"><img alt="Ultimate Frisbee Colorado Cup 2005" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Ultimate_Frisbee_Colorado_Cup_2005.jpg/512px-Ultimate_Frisbee_Colorado_Cup_2005.jpg"/></a>
+
+
+			<a href="https://www.flickr.com/photos/paradisecoastie/15409853738/" title="Ultimate Frisbee"><img src="https://farm4.staticflickr.com/3948/15409853738_7dbfbfbac7_k.jpg"  alt="Ultimate Frisbee"></a>
+		</aside>
+			<section class = "right">
+				<h2>Watch your Head </h2>
+				<p>Ultimate Frisbee is a sport that I never played myself, but it's popularity is something hard to ignore in many Midwestern college towns.  Students (and people who wish they were still students) spend the few briefs months of good weather, sprinting down fields, hurling frisbees, and yelling "Stack!!".</p>
+				<p>What I find much more entertaining is the large number of people who continue to play when the weather gets windy and the night sky darkens around oh....4:15pm.  The sight of frisbees boomeranging in the wind is topped only by the knowledge that even when you can't seem, those same plastic discs of death are probably hurtling through the dark night sky at 8 or 9 o'clock in the evening.
+				</p>
+				<p>Ultimate Frisbee requires a great deal of stamina and dexterity.  Not surprisingly, the <abbr title = "International Olympic Committee">IOC</abbr> officially recognized Ultimate as a sport in 2015.   It can go up against other sports for inclusion in  Olympic games.</p>
+			</section>
+</main>
 </body>
 </html>
