--- a/cssclass/indexshit.html
+++ b/cssclass/indexshit.html
@@ -6,31 +6,20 @@
         adds a logo to the url bar
         <link rel="icon" type="image/png" href="imgs/wd4elogo.png"> -->
         <script src="https://kit.fontawesome.com/7e43f95222.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/styles.css">
-        <title>My School Page</title>
+        <link rel="stylesheet" href="css/week2.css">
+    <title>My School Page</title>
 </head>
 <body>
-    <span>Span A</span>
-<span>Span B</span>
-<span>Span C</span>
-<hr>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam culpa hic eligendi similique inventore enim quae blanditiis qui, deleniti nihil velit sequi maxime quam. Earum cumque ipsum inventore provident, consequuntur.</div>
-  
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut maiores, eos non repellat quaerat officia! Sint aperiam aut nobis laborum earum, nam assumenda voluptas. Cumque veniam facilis similique quod eveniet.</div>
-<div>Div C</div>
-<hr>
-<p>Paragraph A</p>
-<p>Paragraph B</p>
-<p>Paragraph C</p>
-    
-    <h1>Scott Langdon</h1>
-    <nav>
-        <a href="https://google.com">One</a>
-        <a href="https://reddit.com">Two</a>
-        <a href="https://spotify.com">Three</a>
-        <a href="https://yahoo.com">Four</a>
-    </nav>
-    <section>
+    <header>
+        <h1>Scott Langdon</h1>
+        <nav>
+            <a href="https://google.com">One</a>
+            <a href="https://reddit.com">Two</a>
+            <a href="https://spotify.com">Three</a>
+            <a href="https://yahoo.com">Four</a>
+        </nav>
+    </header>    
+    <section class="half">
         <h2>Favorite Foods</h2>
         <ul>
             <li>Tacos</li>
@@ -39,13 +28,13 @@
             <li>Pizza</li>
         </ul>
     </section>
-    <section>
+    <section class="half">
         <h2>Achievements</h2>
         Progress in this course (100%)  <meter min="0" max="100" value="100"></meter><br>
         Progress in the specialization capstone (20%)  <meter min="0" max="100" value="20"></meter><br>
         Progress in life goals (75%)  <meter min="0" max="100" value="75"></meter>
     </section>
-    <section>
+    <section class="whole">
         <h2>More About Me</h2>
         <details>
             <summary>My Childhood</summary>
@@ -53,7 +42,7 @@
         </details>
     </section>
     <footer>   
-        <img src="newlogo.png" alt="web development for everyone logo">This page was created by Scott Langdon around
+        <img src="images/newlogo.png" alt="web development for everyone logo">This page was created by Scott Langdon around
         Colleen van Wendt. To learn more about web design visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>,
     </footer>
 </body>
