JS stuff over the weekend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         adds a logo to the url bar
         <link rel="icon" type="image/png" href="imgs/wd4elogo.png"> -->
         <script src="https://kit.fontawesome.com/7e43f95222.js" crossorigin="anonymous"></script>
-    <title>My School Page</title>
+    <title>My Stonk Page</title>
 </head>
 <body>
     <main>
