--- a/jsSkewl/slider/index.html
+++ b/jsSkewl/slider/index.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Basic JavaScript Slideshow</title>
+    <meta charset="UTF-8">
+
+    <title>Slide Show with Cross Fade</title>
+
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="js/fadeslide.js" defer></script>
+
 </head>
 
 <body>
-	<div>
-    	<img src="image1.jpg" alt="slideshow image" id="myimage">
+
+    <div id="content">
+        <img src="img/image1.jpg" alt="slideshow image" id="myimage">
     </div>
-    
-    <p><a href="#" id="previous">previous</a> --- <a href="#" id="next">next</a></p>
+
+    <p id="links"><a href="#" id="previous">previous</a><a href="#" id="next">next</a></p>
+
 </body>
 
 </html>
