--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         adds a logo to the url bar
         <link rel="icon" type="image/png" href="imgs/wd4elogo.png"> -->
         <script src="https://kit.fontawesome.com/7e43f95222.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>My Stonk Page</title>
 </head>
 <body>
