--- a/jsSkewl/jqueryclass/index.html
+++ b/jsSkewl/jqueryclass/index.html
@@ -9,7 +9,7 @@
 	<script src="js/challenge.js" defer></script>
 </head>
 <body>
-	<p>Don't change this paragraph.</p>
+	<!-- <p>Don't change this paragraph.</p>
 	<div id="main">
 		<p>Here is paragraph 1.</p>
 		<p>Here is paragraph 2.</p>
@@ -25,7 +25,17 @@
 		<p>Here is paragraph 12.</p>
 
 
-	</div>
+	</div> -->
+	<nav>
+		<ul>
+			<li><a href="#">link one</a></li>
+			<li><a href="#">link two</a></li>
+			<li><a href="#">link three</a></li>
+			<li><a href="#">link four</a></li>
+			<li><a href="#">link five</a></li>
+		</ul>
+	</nav>
+	<p>Here is paragraph with a <a href="https://www.google.com">link to google</a></p>
 
 
 	
