a couple more challenges done at work

--- a/jsSkewl/jqueryclass/index.html
+++ b/jsSkewl/jqueryclass/index.html
@@ -35,8 +35,8 @@
 			<li><a href="#">link five</a></li>
 		</ul>
 	</nav>
-	<p>Here is paragraph with a <a href="https://www.google.com">link to google</a></p>
-
+	<p id="paragraph">Click a link to change this 
+		paragraph</p>
 
 	
 
