more jquery learnin

--- a/jsSkewl/jqueryclass/index.html
+++ b/jsSkewl/jqueryclass/index.html
@@ -35,8 +35,11 @@
 			<li><a href="#">link five</a></li>
 		</ul>
 	</nav>
-	<p id="paragraph">Click a link to change this 
-		paragraph</p>
+	<p id="paralink1">Looks like you clicked the first link in the list</p>
+<p id="paralink2">Looks like you clicked the second link in the list</p>
+<p id="paralink3">Looks like you clicked the third link in the list</p>
+<p id="paralink4">Looks like you clicked the fourth link in the list</p>
+<p id="paralink5">Looks like you clicked the fifth link in the list</p>
 
 	
 
